# seseragi

./: .gitignore  AGENTS.md  ARRAY_LIST_IMPLEMENTATION_PLAN.md  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE.txt  README.md  ROADMAP.md  SESERAGI_GUIDE_EN.md  SESERAGI_GUIDE_JA.md  SESERAGI_SPEC.md  SESERAGI_SPEC_JA.md  TODO.md  biome.json  debug-parsing.ts  debug-type-alias.ts  debug_circle.test.ts  debug_stack_overflow.test.ts  example.ssrg  final_adt_test.test.ts  grammar-complete.md  grammar-current.md  package.json  problem.ssrg  problem.ts  simple-test.ssrg  simple-test.ts  simple_adt_test.test.ts  simple_template.ssrg  simple_test.ssrg  simple_test.ts  specification.md  tempCodeRunnerFile.ssrg  temp_debug.ts  template_test.ssrg  test-block-return.ssrg  test-block-return.ts  test-builtin-generics.ssrg  test-builtin-generics.ts  (+29 more)
.claude/: settings.json  (+1 more)
crates/seseragi-cli/: Cargo.toml
crates/seseragi-cli/src/: format.rs  main.rs  run.rs
crates/seseragi-cli/src/run/: package.rs
crates/seseragi-cli/tests/: run.rs
crates/seseragi-conformance/: Cargo.toml
crates/seseragi-conformance/src/: checks.rs  discovery.rs  execution.rs  execution_case.rs  generated_module.rs  main.rs  pipeline.rs  project_compile.rs  project_execution.rs  report.rs  runner.rs  runtime_abi.rs  runtime_package.rs  runtime_stage.rs  stdlib_surface.rs  suite.rs  surface_ast.rs  typescript_ir.rs
crates/seseragi-conformance/src/execution/: entry.rs  exit.rs  trace.rs
crates/seseragi-conformance/src/execution/entry/: environment.rs  observations.rs
crates/seseragi-conformance/src/execution_case/: effect_contract.rs  environment.rs  exit.rs  invocation.rs  invocation_contract.rs  trace.rs
crates/seseragi-conformance/src/execution_case/effect_contract/: failure.rs  model.rs  standard_types.rs  tests.rs
crates/seseragi-conformance/src/execution_case/environment/: model.rs  tests.rs  validate.rs
crates/seseragi-conformance/src/execution_case/invocation_contract/: tests.rs
crates/seseragi-conformance/src/generated_module/: imports.rs  instances.rs  typecheck.rs
crates/seseragi-conformance/src/generated_module/instances/: tests.rs
crates/seseragi-conformance/src/project_compile/: check.rs  compile.rs  model.rs  stage.rs  tests.rs  typecheck.rs
crates/seseragi-conformance/src/project_execution/: check.rs  model.rs  tests.rs
crates/seseragi-conformance/src/project_execution/model/: discovery.rs  schema.rs
crates/seseragi-conformance/src/project_execution/tests/: discovery.rs
crates/seseragi-conformance/src/runtime_abi/: type_imports.rs
crates/seseragi-conformance/src/runtime_package/: comprehension.rs  effect.rs  imports.rs  iterator.rs  list.rs  range.rs  service.rs  services.rs  sum.rs
crates/seseragi-driver/: Cargo.toml
crates/seseragi-driver/src/: analyze.rs  compile.rs  dependencies.rs  format.rs  input.rs  lib.rs  local_package.rs  local_project.rs  output.rs  output_plan.rs  project_compile.rs  reporting.rs
crates/seseragi-driver/src/output_plan/: provider_tests.rs
crates/seseragi-driver/src/project_compile/: outputs.rs  package_scope_tests.rs  provider_tests.rs  validation.rs
crates/seseragi-driver/tests/: compile_module.rs  human_diagnostics.rs
crates/seseragi-lowering/: Cargo.toml
crates/seseragi-lowering/src/: collection_ops.rs  core.rs  effect_ops.rs  emit.rs  equality_ops.rs  int_ops.rs  iterator_ops.rs  lib.rs  list_ops.rs  prelude_ops.rs  range_ops.rs  runtime_modules.rs  runtime_types.rs  show_ops.rs  signal_ops.rs  span.rs  sum_ops.rs  typescript.rs  web_html_ops.rs
crates/seseragi-lowering/src/core/: adt.rs  decision.rs  expr.rs  instances.rs  types.rs
crates/seseragi-lowering/src/core/decision/: tests.rs
crates/seseragi-lowering/src/core/instances/: tests.rs
crates/seseragi-lowering/src/emit/: comprehension_tests.rs  constrained_function_tests.rs  decision.rs  imports.rs  instances.rs  metadata.rs  source_map.rs
crates/seseragi-lowering/src/emit/instances/: tests.rs
crates/seseragi-lowering/src/typescript/: adt.rs  decision.rs  dictionaries.rs  expr.rs  imports.rs  instances.rs  module_imports.rs  names.rs  runtime.rs  type_imports.rs  types.rs
crates/seseragi-lowering/src/typescript/expr/: comprehension.rs
crates/seseragi-lowering/src/typescript/instances/: evidence.rs  tests.rs
crates/seseragi-lowering/src/typescript/module_imports/: instances.rs  names.rs  references.rs  types.rs
crates/seseragi-lowering/src/typescript/type_imports/: expr.rs  tests.rs
crates/seseragi-lowering/tests/: from_either.rs  imported_effect_invocation.rs  match_decision.rs  module_imports.rs  newtype.rs  pure_comparison.rs  pure_conditional.rs  runtime_type_imports.rs  standard_sum.rs  tuple_value.rs  user_add_operator.rs  user_eq_operator.rs
crates/seseragi-lsp/: Cargo.toml
crates/seseragi-lsp/src/: capabilities.rs  diagnostics.rs  features.rs  lib.rs  main.rs  model.rs  protocol.rs  server.rs
crates/seseragi-lsp/tests/: stdio.rs
crates/seseragi-project/: Cargo.toml
crates/seseragi-project/src/: graph.rs  identity.rs  lib.rs  link.rs  loader.rs  local_graph.rs  local_project.rs  manifest.rs  module_path.rs  package_name.rs  specifier.rs  standard.rs
crates/seseragi-project/src/link/: model.rs  target.rs  tests.rs
crates/seseragi-project/src/loader/: audit.rs  error.rs  filesystem.rs  model.rs  tests.rs
crates/seseragi-project/src/local_graph/: error.rs  import.rs  model.rs  tests.rs
crates/seseragi-project/src/local_project/: error.rs  import.rs  model.rs  tests.rs
crates/seseragi-project/src/manifest/: dependency.rs  error.rs  model.rs  parse.rs  requirement.rs  tests.rs
crates/seseragi-runtime/: Cargo.toml
crates/seseragi-runtime/src/: contract.rs  lib.rs  package.rs  process.rs
crates/seseragi-runtime/src/process/: entry.rs  local_package.rs
crates/seseragi-wasm/: Cargo.toml
crates/seseragi-wasm/src/: lib.rs
src/: ast.ts  (+11 more)
(+3488 files in other folders)
