[workspace]
members = [
  "crates/seseragi-conformance",
  "crates/seseragi-syntax",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/morishita/seseragi"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
