[workspace]
members = [
  "crates/seseragi-cli",
  "crates/seseragi-conformance",
  "crates/seseragi-driver",
  "crates/seseragi-lowering",
  "crates/seseragi-lsp",
  "crates/seseragi-project",
  "crates/seseragi-runtime",
  "crates/seseragi-semantics",
  "crates/seseragi-source",
  "crates/seseragi-syntax",
  "crates/seseragi-wasm",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/morishita/seseragi"

[workspace.dependencies]
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-normalization = "0.1"
wasm-bindgen = "0.2"
