[package]
name = "seseragi-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "seseragi"
path = "src/main.rs"

[dependencies]
seseragi-driver = { path = "../seseragi-driver" }
seseragi-project = { path = "../seseragi-project" }
seseragi-runtime = { path = "../seseragi-runtime" }
