[package]
name = "seseragi-conformance"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
default-run = "seseragi-conformance"

[dependencies]
serde.workspace = true
serde_json.workspace = true
seseragi-lowering = { path = "../seseragi-lowering" }
seseragi-semantics = { path = "../seseragi-semantics" }
seseragi-syntax = { path = "../seseragi-syntax" }
