[package]
name = "seseragi-driver"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
seseragi-lowering = { path = "../seseragi-lowering" }
seseragi-project = { path = "../seseragi-project" }
seseragi-semantics = { path = "../seseragi-semantics" }
seseragi-source = { path = "../seseragi-source" }
seseragi-syntax = { path = "../seseragi-syntax" }

[dev-dependencies]
serde_json.workspace = true
