[package]
name = "seseragi-lowering"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
seseragi-semantics = { path = "../seseragi-semantics" }
seseragi-syntax = { path = "../seseragi-syntax" }
unicode-ident.workspace = true

[dev-dependencies]
serde_json.workspace = true
seseragi-project = { path = "../seseragi-project" }
