[package]
name = "seseragi-lsp"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "seseragi-lsp"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
seseragi-driver = { path = "../seseragi-driver" }
seseragi-source = { path = "../seseragi-source" }
seseragi-syntax = { path = "../seseragi-syntax" }
