[package]
name = "seseragi-project"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
semver.workspace = true
serde.workspace = true
seseragi-syntax = { path = "../seseragi-syntax" }
toml.workspace = true
unicode-normalization.workspace = true
