[package]
name = "seseragi-runtime"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
seseragi-driver = { path = "../seseragi-driver" }
seseragi-semantics = { path = "../seseragi-semantics" }
seseragi-syntax = { path = "../seseragi-syntax" }
