[package]
name = "seseragi-wasm"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
seseragi-driver = { path = "../seseragi-driver" }
seseragi-lowering = { path = "../seseragi-lowering" }
seseragi-runtime = { path = "../seseragi-runtime" }
seseragi-syntax = { path = "../seseragi-syntax" }
wasm-bindgen.workspace = true
